Criado arquivo python
Criado arquivo python para gerar o word depois, porém foi verificado que a inspeção possui erro

--- a/Controle_de_qualidade_terceiros/planilha_qualidade.html
+++ b/Controle_de_qualidade_terceiros/planilha_qualidade.html
@@ -155,6 +155,9 @@
                     if (valueA === "INSPEÇÃO REPROVADA") {
                         PontoInspecao = 0;
                     }
+                    if(valueA === "INSPEÇÃO"){
+                        PontoInspecao = 0;
+                    }
                     if (valueE <= valueD) {
                         Pontualidade = 1;
                     }
